fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ nav a:hover{
   grid-template-columns: 1fr 3fr 3fr 1fr;
   grid-template-rows: auto auto auto auto;
   gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 header{
@@ -124,7 +126,6 @@ header{
 .about, .method, .client, .contacts{
   /*Your Code Here*/
   grid-column: 2/span 2;
-  text-align: left;
 }
 
 /*Req 8a, 8b, and 8c*/
@@ -168,7 +169,6 @@ header{
   border: 10px solid black;
   padding: 30px;
   /*Your code here:*/
-  text-align: left;
 }
 
 
